--- a/realisations.html
+++ b/realisations.html
@@ -6,8 +6,7 @@
   <title>Entreprise PAREDE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
+  <link rel="stylesheet" href="btp.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> 
   <link href='https://fonts.googleapis.com/css?family=Poiret One' rel='stylesheet'>   
@@ -26,12 +25,12 @@
   </div>
 <div class="nav_container">
     <div class="topnav" id="myTopnav">
-      <a href="contact.html">Accueil</a>
-      <a href="creations.html">Qui sommes-nous ?</a>
-      <a href="services.html">Equipe</a>
-      <a href="atelier.html">Réalisations</a>
-      <a href="index.html">Contact</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
+      <a href="accueil.html">Accueil</a>
+      <a href="presentation.html">Qui sommes-nous ?</a>
+      <a href="equipe.html">Equipe</a>
+      <a href="realisations.html">Réalisations</a>
+      <a href="contact.html">Contact</a>
+      <a class="icon" > <i class="fa fa-bars"></i></a>
     </div>
   </div>
 </header>
@@ -58,11 +57,11 @@
       <h2 id="parede">Entreprise PAREDE</h2>
    </div>
    <div class="sitemap">
-      <a href="contact.html">Accueil</a>
-      <a href="creations.html">Qui sommes-nous ?</a>
-      <a href="services.html">Equipe</a>
-      <a href="atelier.html">Réalisations</a>
-      <a href="index.html">Contact</a>        
+    <a href="accueil.html">Accueil</a>
+    <a href="presentation.html">Qui sommes-nous ?</a>
+    <a href="equipe.html">Equipe</a>
+    <a href="realisations.html">Réalisations</a>
+    <a href="contact.html">Contact</a>      
     </div>
     <div class="social">
       <a href="#" class="fa fa-facebook"></a>
