--- a/accueil.html
+++ b/accueil.html
@@ -25,12 +25,12 @@
   </div>
 <div class="nav_container">
     <div class="topnav" id="myTopnav">
-      <a href="contact.html">Accueil</a>
-      <a href="creations.html">Qui sommes-nous ?</a>
-      <a href="services.html">Equipe</a>
-      <a href="atelier.html">Réalisations</a>
-      <a href="index.html">Contact</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
+      <a href="accueil.html">Accueil</a>
+      <a href="presentation.html">Qui sommes-nous ?</a>
+      <a href="equipe.html">Equipe</a>
+      <a href="realisations.html">Réalisations</a>
+      <a href="contact.html">Contact</a>
+      <a class="icon" > <i class="fa fa-bars"></i></a>
     </div>
   </div>
 </header>
@@ -57,11 +57,11 @@
       <h2 id="parede">Entreprise PAREDE</h2>
    </div>
    <div class="sitemap">
-      <a href="contact.html">Accueil</a>
-      <a href="creations.html">Qui sommes-nous ?</a>
-      <a href="services.html">Equipe</a>
-      <a href="atelier.html">Réalisations</a>
-      <a href="index.html">Contact</a>        
+    <a href="accueil.html">Accueil</a>
+    <a href="presentation.html">Qui sommes-nous ?</a>
+    <a href="equipe.html">Equipe</a>
+    <a href="realisations.html">Réalisations</a>
+    <a href="contact.html">Contact</a>      
     </div>
     <div class="social">
       <a href="#" class="fa fa-facebook"></a>
