--- a/accueil.html
+++ b/accueil.html
@@ -64,8 +64,8 @@
     <a href="contact.html">Contact</a>      
     </div>
     <div class="social">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-google"></a>
+      <a href="https://laplateforme.io/" class="fa fa-facebook"></a>
+      <a href="https://laplateforme.io/" class="fa fa-google"></a>
     </div>
   </div>
 
