--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,13 @@
 </header>
 
 <div class="contact_background"></div>
+<div id="shape1">
 
-<div class="info-container">
+<div class="info_container">
+    <div class="contact_info_container"> 
 
-  <div id="shape1">
-    <div id="description"></div>
     </div>
+    <div class="contact_form_container"> </div>
 </div>
 
 </div>
