--- a/equipe.html
+++ b/equipe.html
@@ -38,7 +38,23 @@
 <div class="contact_background"></div>
 
 <div class="info-container">
-
+    <section>
+      <h1 class="mh1">Nos realisations:</h1>
+        <div id="slider">
+        <figure>
+          <img src="real1.jpg">
+          <img src="real2.jpg">
+          <img src="real3.jpg">
+          <img src="real4.jpg">
+          <img src="real5.jpg">
+          <img src="real6.jpg">
+          <img src="real7.jpg">
+          <img src="real8.jpg">
+          <img src="real9.jpg">
+          <img src="real10.jpg">
+        </figure>
+      </div>
+    </section>
   <div id="shape1">
     <div id="description"></div>
     </div>
