--- a/presentation.html
+++ b/presentation.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/alex-brush" type="text/css" />
+  <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -56,6 +58,8 @@
    <div class="compagny_name">
       <h2 id="parede">Entreprise PAREDE</h2>
    </div>
+    <p class="parede">PAREDE</p>
+  </div>
    <div class="sitemap">
     <a href="accueil.html">Accueil</a>
     <a href="presentation.html">Qui sommes-nous ?</a>
