--- a/equipe.html
+++ b/equipe.html
@@ -14,8 +14,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/alex-brush" type="text/css" />
-  <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-
 </head>
 
 <body>
@@ -40,7 +38,23 @@
 <div class="contact_background"></div>
 
 <div class="info-container">
-
+    <section>
+      <h1 class="mh1">Nos realisations:</h1>
+        <div id="slider">
+        <figure>
+          <img src="real1.jpg">
+          <img src="real2.jpg">
+          <img src="real3.jpg">
+          <img src="real4.jpg">
+          <img src="real5.jpg">
+          <img src="real6.jpg">
+          <img src="real7.jpg">
+          <img src="real8.jpg">
+          <img src="real9.jpg">
+          <img src="real10.jpg">
+        </figure>
+      </div>
+    </section>
   <div id="shape1">
     <div id="description"></div>
     </div>
@@ -56,8 +70,8 @@
 <footer >
   <div class="footer_container">
    <div class="compagny_name">
-    <p class="parede">PAREDE</p>
-  </div>
+      <h2 id="parede">Entreprise PAREDE</h2>
+   </div>
    <div class="sitemap">
     <a href="accueil.html">Accueil</a>
     <a href="presentation.html">Qui sommes-nous ?</a>
