--- a/realisations.html
+++ b/realisations.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
 <head>
+  <script src="scripts.js"></script>
   <title>Entreprise PAREDE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,9 +31,9 @@
       <a href="accueil.html">Accueil</a>
       <a href="presentation.html">Qui sommes-nous ?</a>
       <a href="equipe.html">Equipe</a>
-      <a href="realisations.html">Réalisations</a>
+      <a class="online"  href="realisations.html">Réalisations</a>
       <a href="contact.html">Contact</a>
-      <a class="icon" > <i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
     </div>
   </div>
 </header>
@@ -40,11 +41,28 @@
 <div class="contact_background"></div>
 
 <div class="info-container">
+  <div id="shape3"></div>
 
-  <div id="shape1">
-    <div id="description"></div>
+  <section>
+      <div id="slider">
+      <figure>
+        <img src="content/real1.jpg">
+        <img src="content/real2.jpg">
+        <img src="content/real3.jpg">
+        <img src="content/real4.jpg">
+        <img src="content/real5.jpg">
+        <img src="content/real6.jpg">
+        <img src="content/real7.jpg">
+        <img src="content/real8.jpg">
+        <img src="content/real9.jpg">
+        <img src="content/real10.jpg">
+      </figure>
     </div>
-</div>
+  </section>
+    <div id="shape2"></div>
+  </div>
+  
+
 
 </div>
  
