--- a/presentation.html
+++ b/presentation.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
 <head>
+  <script src="scripts.js"></script>
   <title>Entreprise PAREDE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,22 +29,27 @@
 <div class="nav_container">
     <div class="topnav" id="myTopnav">
       <a href="accueil.html">Accueil</a>
-      <a href="presentation.html">Qui sommes-nous ?</a>
+      <a class="online"  href="presentation.html">Qui sommes-nous ?</a>
       <a href="equipe.html">Equipe</a>
       <a href="realisations.html">Réalisations</a>
       <a href="contact.html">Contact</a>
-      <a class="icon" > <i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
     </div>
   </div>
 </header>
 
 <div class="contact_background"></div>
 
-<div class="info-container">
+<div class="presentation">
+  <div id="shape4">
 
-  <div id="shape1">
-    <div id="description"></div>
-    </div>
+    <h3> Une entreprise experte pour vos travaux de maçonnerie générale </h3>
+    <h3>____</h3>
+
+    <p> La SARL <b>Parede </b>est une société à responsabilité limitée. Elle développe son activité dans le secteur du BTP et de la construction. Fondée en 1990, l’entreprise bénéficie d’une expérience certaine. En plus du chef d’entreprise, qui bénéficie de plus de 30 ans d’expérience professionnelle dans le secteur du BTP Construction, l'equipe est expérimentée et habituée aux travaux les plus variés. </p>
+    <h3>____</h3>
+
+  </div>
 </div>
 
 </div>
