--- a/equipe.html
+++ b/equipe.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
 <head>
+  <script src="scripts.js"></script>
   <title>Entreprise PAREDE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,20 +30,73 @@
     <div class="topnav" id="myTopnav">
       <a href="accueil.html">Accueil</a>
       <a href="presentation.html">Qui sommes-nous ?</a>
-      <a href="equipe.html">Equipe</a>
+      <a class="online" href="equipe.html">Equipe</a>
       <a href="realisations.html">Réalisations</a>
       <a href="contact.html">Contact</a>
-      <a class="icon" > <i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
     </div>
   </div>
 </header>
+
 
 <div class="contact_background"></div>
 
 <div class="info-container">
 
-  <div id="shape1">
-    <div id="description"></div>
+        <div id="shapeEquipe">
+          <div class="bigContainer">
+
+            <div class="card">
+              <img class="imgCard" src="content/directeurMacon.jpg">
+              <div class="container">
+                <h3 align="center"><b>Tiago</b></h3>
+                <h4 align="center"><b>Directeur / maçon</b></h4>
+                <p>Fondateur de la SARL Parede, et egalement maçon aguerri, il dirige avec dynamisme notre entreprise.   </p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="imgCard" src="content/secretaire.jpg">
+              <div class="container">
+                <h3 align="center"><b>Livia</b></h3>
+                  <b><h4 align="center">Secretaire</h4></b>
+                <p>Toujours souriante et de bonne humeur, n'hesitez pas à la contacter pour prendre RDV ou pour toutes informations.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="imgCard" src="content/peintre.jpg">
+              <div class="container">
+                <h3 align="center"><b>Pablo</b></h4>
+                <b><h4 align="center">Peintre</h4></b>
+                <p>Notre peintre de père en fils depuis plus de 150 ans. Il effectura vos travaux de peinture en interieur comme en exterieur. </p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="imgCard" src="content/couvreur.jpg">
+              <div class="container">
+                <h3 align="center"><b>Miguel</b></h3>
+                <b><h4 align="center">Couvreur</h4></b>
+                <p>Miguel est expert en toitures, sa rigueur et son sens du detail font qu'il est toujours au sommet.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="imgCard" src="content/electricien.jpg">
+              <div class="container">
+                <h3 align="center"><b>Rodrigo</b></h3>
+                <b><h4 align="center">Electricien</h4></b>
+                <p>Faites confiance a Rodrigo il saura allier son efficacité à son sens pratique pour réaliser votre réseau électrique.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="imgCard"src="content/carreleur.jpg">
+              <div class="container">
+                <h3 align="center"><b>Sandro</b></h3>
+                <b><h4 align="center">Carreleur</h4></b>
+                <p>Le sens du travail bien fait et son maître mot. Il mettra toutes ses compétences à votre service.</p>
+              </div>
+            </div>
+      </div>
+
+
     </div>
 </div>
 
