--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
 <head>
+  <script src="scripts.js"></script>
   <title>Entreprise PAREDE</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,8 +33,8 @@
           <a href="presentation.html">Qui sommes-nous ?</a>
           <a href="equipe.html">Equipe</a>
           <a href="realisations.html">Réalisations</a>
-          <a href="contact.html">Contact</a>
-          <a class="icon"> <i class="fa fa-bars"></i></a>
+          <a class="online"  href="contact.html">Contact</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
         </div>
       </div>
   </header>
