--- a/accueil.html
+++ b/accueil.html
@@ -44,6 +44,8 @@
   <div class="info-container">
 
     <div id="shape1">
+      <h2>  Ensemble, construisons <a href="contact.html">Votre projet</a>  </h2>         
+
       <div id="description"></div>
     </div>
   </div>
