--- a/accueil.html
+++ b/accueil.html
@@ -44,7 +44,7 @@
   <div class="info-container">
 
     <div id="shape1">
-      <h2>  Ensemble, construisons <a href="contact.html">Votre projet</a>  </h2>         
+      <h2> Ensemble, construisons <a href="contact.html">Votre projet</a> </h2>
 
       <div id="description"></div>
     </div>
@@ -82,3 +82,4 @@
   </div>
 
 </body>
+</html>
