--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
           <a href="presentation.html">Qui sommes-nous ?</a>
           <a href="equipe.html">Equipe</a>
           <a href="realisations.html">Réalisations</a>
-          <a class="online"  href="contact.html">Contact</a>
+          <a class="online" href="contact.html">Contact</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()"> <i class="fa fa-bars"></i></a>
         </div>
       </div>
@@ -56,7 +56,6 @@
           <p>du lundi au vendredi <br>9h - 12h / 13h30 - 18h </p>
         </div>
       </div>
-
 
       <div class="contact_form_container">
         <form action="/action_page.php">
@@ -106,3 +105,4 @@
   </div>
 
 </body>
+</html>
